--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </p>
     </article>
 
-    <!--*********************************** sk리츠의 가치 -->
+    <!--******* sk리츠의 가치 -->
     <article class="skreit">
 
         <div class="title">
@@ -200,7 +200,8 @@
     </article>
     <!-- ************************************* -->
     <article class="portfolio">
-        <div class="bg"></div>
+        <div class="bg" data-pf="0">
+        </div>
         <div class="inner">
             <div class="content-left">
                 <div class="title">
@@ -313,102 +314,105 @@
 
 
     </article>
-    <!--  <article class="feature">
+
+
+    <article class="feature">
         <nav>
             <ul>
-                <li><a href="prowth"></a>성장성</li>
-                <li><a href="#"></a>안정성</li>
-                <li><a href="#"></a>수익성</li>
+                <li class="on"><a href="growth">성장성</a></li>
+                <li><a href="#">안정성</a></li>
+                <li><a href="#">수익성</a></li>
             </ul>
         </nav>
 
-        <div class="growth">
-            <div>
-                <h2>성장성</h2>
-                <p><span>국내 최고 리츠</span>를 넘어 <span>글로벌 리츠</span>로 도약</p>
+        <div id="growth">
+            <div class="growth-media">
+                <div class="title">
+                    <h2>성장성</h2>
+                    <p><span>국내 최고 리츠</span>를 넘어 <span>글로벌 리츠</span>로 도약</p>
+                </div>
                 <div class="sub-media">
                     <iframe width="464" height="260" src="https://www.youtube.com/embed/82H1fDzy0w0"
                         title="SK리츠 성장성편 (SK REIT)" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-
-                <div class="prowth-des">
-                    <div class="swiper mySwiper2">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="porwth-txt">
-                                    <div class="top-txt">
-                                        <h3><span>4.4</span>조원</h3>
-                                        <p>운영자산 규모</p>
-                                    </div>
-                                    <div class="bottom-txt">
-                                        <div class="icon-box"></div>
-                                    </div>
+            </div>
+            <div class="growth-des">
+                <div class="swiper mySwiper2">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="porwth-txt">
+                                <div class="top-txt">
+                                    <h3><span>4.4</span>조원</h3>
+                                    <p>운영자산 규모</p>
+                                </div>
+                                <div class="bottom-txt">
+                                    <div class="icon-box"></div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
-                                <div class="porwth-txt">
-                                    <div class="porwth-txt">
-                                        <div class="top-txt">
-                                            <h3>AA--</h3>
-                                            <p>기업신용등급</p>
-                                        </div>
-                                        <div class="bottom-txt">
-                                            <p>*NICE 신용평가원/한국 기업평가</p>
-                                            <div class="icon-box"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="porwth-txt">
                                 <div class="porwth-txt">
                                     <div class="top-txt">
-                                        <h3><span>120</span>개</h3>
-                                        <p>운용자산수</p>
+                                        <h3>AA--</h3>
+                                        <p>기업신용등급</p>
                                     </div>
                                     <div class="bottom-txt">
-                                        <p>*오퍼스4개</p>
-                                        <p>*수처리센터 5개</p>
-                                        <p>*주요소 111개</p>
-                                        <div class="icon-box"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="porwth-txt">
-                                    <div class="top-txt">
-                                        <h3>글로벌 Index</h3>
-                                        <p>FTSE EPRA NAREIT<br>
-                                            Grobal,Developed Asia등
-                                        </p>
-                                        <p>FTSE<br>
-                                            <span>All Cap, Developed</span>
-                                        </p>
-                                        <p>MSCI<br>
-                                            <span>All Cap, ACWI등</span>
-                                        </p>
-                                        <p>Moringstar<br>
-                                            <span>Global Markets REIT 등</span>
-                                        </p>
-
-                                    </div>
-                                    <div class="bottom-txt">
-                                        <p>*오퍼스4개</p>
-                                        <p>*수처리센터 5개</p>
-                                        <p>*주요소 111개</p>
+                                        <p>*NICE 신용평가원/한국 기업평가</p>
                                         <div class="icon-box"></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-pagination"></div>
+                        <div class="swiper-slide">
+                            <div class="porwth-txt">
+                                <div class="top-txt">
+                                    <h3><span>120</span>개</h3>
+                                    <p>운용자산수</p>
+                                </div>
+                                <div class="bottom-txt">
+                                    <p>*오퍼스4개</p>
+                                    <p>*수처리센터 5개</p>
+                                    <p>*주요소 111개</p>
+                                    <div class="icon-box"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="porwth-txt">
+                                <div class="top-txt">
+                                    <h3>글로벌 Index</h3>
+                                    <p>FTSE EPRA NAREIT<br>
+                                        Grobal,Developed Asia등
+                                    </p>
+                                    <p>FTSE<br>
+                                        <span>All Cap, Developed</span>
+                                    </p>
+                                    <p>MSCI<br>
+                                        <span>All Cap, ACWI등</span>
+                                    </p>
+                                    <p>Moringstar<br>
+                                        <span>Global Markets REIT 등</span>
+                                    </p>
+
+                                </div>
+                                <div class="bottom-txt">
+                                    <p>*오퍼스4개</p>
+                                    <p>*수처리센터 5개</p>
+                                    <p>*주요소 111개</p>
+                                    <div class="icon-box"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
-
         </div>
-    </article> -->
+
+    </article>
 </body>
 
 </html>
