--- a/index.html
+++ b/index.html
@@ -412,37 +412,38 @@
             </div>
         </div>
 
-         <div id="growth">
+        <div id="safety">
             <div class="inner">
                 <div class="growth-media">
                     <div class="title">
-                        <h2>성장성</h2>
-                        <p><span>국내 최고 리츠</span>를 넘어 <span>글로벌 리츠</span>로 도약</p>
+                        <h2>안정성</h2>
+                        <p><span>흔들림 없는</span>안정성으로 <span>지속적 수익 창출</span></p>
                     </div>
                     <div class="sub-media">
-                        <iframe width="464" height="260" src="https://www.youtube.com/embed/82H1fDzy0w0"
-                            title="SK리츠 성장성편 (SK REIT)" frameborder="0"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/QutmaxLwAzU?controls=0"
+                            title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            allowfullscreen></iframe>
                     </div>
                 </div>
+
                 <div class="growth-des">
-                    <div class="swiper mySwiper2">
+                    <div class="swiper mySwiper3">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide growth-content">
+                            <div class="swiper-slide safety-content">
                                 <div class="growth-txt txt1">
                                     <div class="top-txt">
-                                        <h3><span>4.4</span>조원</h3>
-                                        <p>운영자산 규모</p>
+                                        <h3><span>100</span>%</h3>
+                                        <p>SK그룹 장기책임임차</p>
                                     </div>
                                     <div class="bottom-txt">
-                                        <div class="icon-box"></div>
+                                        <p>* SK 서린빌딩, SK-U타워, SK에너지 주유소, SK하이닉스 수처리센터 (종로타워는 업무시설의 62%)</p>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="swiper-slide">
-                                <div class="growth-txt txt2">
+                                <div class="safety-txt txt2">
                                     <div class="top-txt">
                                         <h3><span>AA--</span></h3>
                                         <p>기업신용등급</p>
@@ -456,13 +457,13 @@
                             </div>
 
                             <div class="swiper-slide">
-                                <div class="growth-txt txt3">
+                                <div class="safety-txt txt3">
                                     <div class="top-txt">
                                         <h3><span>120</span>개</h3>
                                         <p>운용자산수</p>
                                     </div>
                                     <div class="bottom-txt">
-
+                            
                                         <p>*수처리센터 5개</p>
                                         <p>*주요소 111개</p>
                                         <p>>*오퍼스4개</p>
@@ -473,7 +474,7 @@
                             </div>
 
                             <div class="swiper-slide">
-                                <div class="growth-txt txt4">
+                                <div class="safety-txt txt4">
                                     <div class="top-txt">
                                         <h3>글로벌 Index</h3>
                                         <p>FTSE EPRA NAREIT<br>
