--- a/index.html
+++ b/index.html
@@ -561,10 +561,40 @@
             </div>
         </div>
     </article>
-    
-    
-    <article class="ir">
 
+    <article class="ir">
+        <div class="inner">
+            <h2>IR INFO</h2>
+            <div class="ir-info">
+                <div class="info-price">
+                    <div class="price">
+                        <h3>주가 정보</h3>
+                        <p>4,765</p>
+                    </div>
+                    <div class="ir-current">
+                        <div>
+                            <p>전일대비</p>
+                            <p>10 (0.21%)</p>
+                        </div>
+                        <div>
+                            <p>거래량</p>
+                            <p>277,710</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="ir-link">
+                    <div class="box box1">
+                        <a href="#">재무실적</a>
+                    </div>
+                    <div class="box box2">
+                        <a href="#">주식정보</a>
+                    </div>
+                    <div class="box box3">
+                        <a href="#">IR</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </article>
     <footer>
 
