--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index1.css">
     <link rel="stylesheet" href="css/media.css">
-    <script src="script/jquery-1.12.4.min.js"></script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="script/jquery-1.12.4.min.js"></script>
     <script src="script/index.js"></script>
 
 
@@ -198,7 +200,7 @@
         </div>
 
     </article>
-    <!-- ************************************* -->
+
     <article class="portfolio">
         <div class="bg" data-pf="0">
         </div>
@@ -247,7 +249,6 @@
 
             </div>
         </div>
-
     </article>
     <article class="portfolio-tablet">
 
@@ -318,13 +319,12 @@
     <article class="feature">
         <nav>
             <ul>
-                <li class="on"><a href="growth">성장성</a></li>
+                <li class="on"><a href="#growth">성장성</a></li>
                 <li><a href="#">안정성</a></li>
                 <li><a href="#">수익성</a></li>
             </ul>
         </nav>
-        <!-- 성장성 -->
-        <div id="growth">
+        <div id="growth" class="growth">
             <div class="inner">
                 <div class="media">
                     <div class="title">
@@ -339,9 +339,10 @@
                     </div>
                 </div>
                 <div class="content-wrap">
-                    <div class="swiper mySwiper2">
+                    <div class="swiper myswiper2">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide content">
+
+                            <div class="swiper-slide">
                                 <div class="content-txt txt1">
                                     <div class="top-txt">
                                         <h3><span>4.4</span>조원</h3>
@@ -405,13 +406,12 @@
                             </div>
                         </div>
                         <div class="pagination2"></div>
+                        <p class="star">*2025년 3월말 기준</p>
                     </div>
-                    <p class="star">*2025년 3월말 기준</p>
                 </div>
             </div>
         </div>
-        <!-- 안전성 -->
-        <div id="safety">
+ <!--        <div id="safety">
             <div class="inner">
                 <div class="media">
                     <div class="title">
@@ -426,9 +426,9 @@
                     </div>
                 </div>
                 <div class="content-wrap">
-                    <div class="swiper mySwiper3">
+                    <div class="swiper myswiper3">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide content">
+                            <div class="swiper-slide">
                                 <div class="content-txt txt1">
                                     <div class="top-txt">
                                         <h3><span>100</span>%</h3>
@@ -484,12 +484,12 @@
                             </div>
                         </div>
                         <div class="pagination3"></div>
+                        <p class="star">*2025년 3월말 기준</p>
                     </div>
-                    <p class="star">*2025년 3월말 기준</p>
+
                 </div>
             </div>
         </div>
-
         <div id="profitability">
             <div class="inner">
                 <div class="media">
@@ -507,9 +507,9 @@
                     </div>
                 </div>
                 <div class="content-wrap">
-                    <div class="swiper mySwiper4">
+                    <div class="swiper myswiper4">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide content">
+                            <div class="swiper-slide">
                                 <div class="content-txt txt1">
                                     <div class="top-txt">
                                         <h3><span>분기배당</span></h3>
@@ -555,11 +555,11 @@
                             </div>
                         </div>
                         <div class="pagination4"></div>
+                        <p class="star">*2025년 3월말 기준</p>
                     </div>
-                    <p class="star">*2025년 3월말 기준</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </article>
 
     <article class="ir">
@@ -596,8 +596,30 @@
             </div>
         </div>
     </article>
-    <footer>
 
+    <footer>
+        <div class="footer-logo"><a href="index.html"><img src="image/logo.png" alt="sk리츠"></a></div>
+
+        <div class="inner">
+            <div class="footer-info">
+                <p>에스케이위탁관리부동산투자회사 주식회사</p>
+                <p>서울특별시 중구 세종대로 136, 15층(태평로 1가, 파이낸스센터)</p>
+                <ul>
+                    <li><span>법인이사 :</span>에스케이리츠운용㈜</li>
+                    <li><span>사업자등록번호</span>248-86-02055
+                    </li>
+                    <li><span>대표번호 :</span> 02-6353-7070</li>
+                    <li><span>팩스번호 :</span>02-6353-7099</li>
+                    <li><span>이메일 :</span>skreit@sk.com</li>
+
+                </ul>
+                <p class="copyright">Copyright © SK reit All rights reserved.</p>
+            </div>
+            <div class="privacy">
+                <p>개인정보처리방침</p>
+                <p>이메일무단수집거부</p>
+            </div>
+        </div>
     </footer>
 </body>
 
