--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/index1.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/media.css">
 
 
@@ -19,7 +19,6 @@
 </head>
 
 <body>
-
     <header>
         <h1 class="logo">
             <a href="index.html"><img src="image/logo_w.png" alt="sk리츠 로고"></a>
@@ -308,7 +307,7 @@
                     </div>
                 </div>
 
-                <div class="swiper-pagination bar"></div>
+                <div class="swiper-pagination"></div>
             </div>
 
         </div>
@@ -324,6 +323,7 @@
                 <li><a href="#">수익성</a></li>
             </ul>
         </nav>
+        <!-- 성장성 -->
         <div id="growth" class="growth">
             <div class="inner">
                 <div class="media">
@@ -341,7 +341,6 @@
                 <div class="content-wrap">
                     <div class="swiper myswiper2">
                         <div class="swiper-wrapper">
-
                             <div class="swiper-slide">
                                 <div class="content-txt txt1">
                                     <div class="top-txt">
@@ -411,7 +410,8 @@
                 </div>
             </div>
         </div>
- <!--        <div id="safety">
+        <!-- 안전성 -->
+        <div id="safety">
             <div class="inner">
                 <div class="media">
                     <div class="title">
@@ -486,10 +486,10 @@
                         <div class="pagination3"></div>
                         <p class="star">*2025년 3월말 기준</p>
                     </div>
-
                 </div>
             </div>
         </div>
+        <!-- 수익성 -->
         <div id="profitability">
             <div class="inner">
                 <div class="media">
@@ -559,7 +559,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
     </article>
 
     <article class="ir">
@@ -596,7 +596,9 @@
             </div>
         </div>
     </article>
-
+    <div class="scroll-top">
+        <a href="#">TOP</a>
+    </div>
     <footer>
         <div class="footer-logo"><a href="index.html"><img src="image/logo.png" alt="sk리츠"></a></div>
 
