--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- sub-menu bg -->
         <div class="wrap"></div>
 
-        <nav>
+        <nav class="inner">
             <ul class="menu">
                 <li>
                     <a href="#">기업정보</a>
@@ -259,7 +259,6 @@
                 '수처리센터 5개동'및'SK-C타워'로 구성되어 있습니다.</p>
         </div>
 
-
         <div class="content-des">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper content-wrap">
@@ -286,15 +285,15 @@
                     </div>
                     <div class="swiper-slide content-box">
                         <div class="con con4">
-                            <h2>SK-U타워</h2>
-                            <p>sk하이닉스 사옥</p>
+                            <h2>종로타워</h2>
+                            <p>sk 그린캠퍼스</p>
                             <a href="#"><img src="image/ic_plus.svg" alt="더보기 야이콘"></a>
                         </div>
                     </div>
                     <div class="swiper-slide content-box">
                         <div class="con con5">
-                            <h2>종로타워</h2>
-                            <p>sk 그린캠퍼스</p>
+                            <h2>수처리센터</h2>
+                            <p>sk하이닉스 이천 캠퍼스</p>
                             <a href="#"><img src="image/ic_plus.svg" alt="더보기 야이콘"></a>
                         </div>
                     </div>
@@ -306,8 +305,7 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination bar"></div>
             </div>
 
         </div>
@@ -403,6 +401,68 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="swiper-slide">
+                                <div class="content-txt txt1">
+                                    <div class="top-txt">
+                                        <h3><span>4.4</span>조원</h3>
+                                        <p>운영자산 규모</p>
+                                    </div>
+                                    <div class="bottom-txt">
+                                        <div class="icon-box"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="swiper-slide">
+                                <div class="content-txt txt2">
+                                    <div class="top-txt">
+                                        <h3><span>AA--</span></h3>
+                                        <p>기업신용등급</p>
+                                    </div>
+                                    <div class="bottom-txt">
+                                        <p>*NICE 신용평가원/<br>한국 기업평가</p>
+                                        <div class="icon-box"></div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="swiper-slide">
+                                <div class="content-txt txt3">
+                                    <div class="top-txt">
+                                        <h3><span>120</span>개</h3>
+                                        <p>운용자산수</p>
+                                    </div>
+                                    <div class="bottom-txt">
+
+                                        <p>*수처리센터 5개</p>
+                                        <p>*주요소 111개</p>
+                                        <p>>*오퍼스4개</p>
+
+                                        <div class="icon-box"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="swiper-slide">
+                                <div class="content-txt txt4">
+                                    <div class="top-txt">
+                                        <h3>글로벌 Index</h3>
+                                        <p>FTSE EPRA NAREIT<br>
+                                            <span>Grobal,Developed Asia등</span>
+                                        </p>
+                                        <p>FTSE<br class="on">
+                                            <span>All Cap, Developed</span>
+                                        </p>
+                                        <p>MSCI<br class="on">
+                                            <span>All Cap, ACWI등</span>
+                                        </p>
+                                        <p>Moringstar<br>
+                                            <span>Global Markets REIT 등</span>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="pagination2"></div>
                         <p class="star">*2025년 3월말 기준</p>
@@ -435,7 +495,7 @@
                                         <p>SK그룹 장기책임임차</p>
                                     </div>
                                     <div class="bottom-txt">
-                                        <p>* SK 서린빌딩, SK-U타워, SK에너지 주유소, SK하이닉스 수처리센터 (종로타워는 업무시설의 62%)</p>
+                                        <p>*SK 서린빌딩, SK-U타워, SK에너지 주유소, SK하이닉스 수처리센터 (종로타워는 업무시설의 62%)</p>
 
                                     </div>
                                 </div>
@@ -475,7 +535,7 @@
                                 <div class="content-txt txt4">
                                     <div class="top-txt">
                                         <h3><span>Triple Net</span></h3>
-                                        <p>연동 구조</p>
+                                        <p>비용구조</p>
                                     </div>
                                     <div class="bottom-txt">
                                         <p>*관리비, 보험료, 제세공과금 및 CAPEX 비용 포함 임차인부담 (100% 책임임차 건만 해당)</p>
@@ -542,8 +602,29 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="swiper-slide">
-                                <div class="content-txt txt4">
+                                <div class="content-txt txt1">
+                                    <div class="top-txt">
+                                        <h3><span>분기배당</span></h3>
+                                        <p>상장 리츠 최초</p>
+                                    </div>
+                                    <div class="bottom-txt">
+                                        <div class="icon-box"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="content-txt txt2">
+                                    <div class="top-txt">
+                                        <h3><span>5.45</span>%</h3>
+                                        <p>배당수익률</p>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="content-txt txt3">
                                     <div class="top-txt">
                                         <h3><span>268</span>원</h3>
                                         <p>지난 1년간 주당 배당금</p>
@@ -553,6 +634,39 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="swiper-slide">
+                                <div class="content-txt txt1">
+                                    <div class="top-txt">
+                                        <h3><span>분기배당</span></h3>
+                                        <p>상장 리츠 최초</p>
+                                    </div>
+                                    <div class="bottom-txt">
+                                        <div class="icon-box"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="content-txt txt2">
+                                    <div class="top-txt">
+                                        <h3><span>5.45</span>%</h3>
+                                        <p>배당수익률</p>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="content-txt txt3">
+                                    <div class="top-txt">
+                                        <h3><span>268</span>원</h3>
+                                        <p>지난 1년간 주당 배당금</p>
+                                    </div>
+                                    <div class="bottom-txt">
+                                        <div class="icon-box"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+
                         </div>
                         <div class="pagination4"></div>
                         <p class="star">*2025년 3월말 기준</p>
