스크롤 문제 해결

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
             <a href="index.html"><img src="image/logo_w.png" alt="sk리츠 로고"></a>
         </h1>
 
-        <!-- sub-menu bg -->
         <div class="wrap"></div>
 
-        <nav class="inner">
+        <nav>
             <ul class="menu">
                 <li>
                     <a href="#">기업정보</a>
@@ -108,7 +107,6 @@
         </div>
 
     </header>
-
 
     <article class="banner">
         <video muted autoplay loop>
